--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -13,6 +13,7 @@ body {
 .content {
     flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
     padding: 20px;
+    padding-top: 100px;
     color: white;
     text-align: center;
 }
@@ -22,4 +23,14 @@ body {
     padding: 5px;
     background-color: #4a4651;
     width: 100%;
+}
+
+.nav-image {
+    width: 100px;
+}
+
+.nav-separator {
+    background-color: #6134b3;
+    width: 5px;
+    height: 35px;
 }
