--- a/templates/index.html
+++ b/templates/index.html
@@ -15,46 +15,28 @@
     <link href="{{ url_for('static', filename= 'css/stylesheet.css') }}" rel="stylesheet">
 
     {% if title %}
-    <title>{{title}} - Augur View</title>
+        <title>{{title}} - Augur View</title>
     {% else %}
-    <title>Augur View</title>
+        <title>Augur View</title>
     {% endif %}
 </head>
 
 <body>
     <!-- TOPNAV -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6f42c1;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Augur</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Repos</a>
-                    </li>
-                    <!-- .junk->NAVBAR_EXTRAS -->
-                </ul>
-                <form class="d-flex" method="get" action="?">
-                    <input class="form-control me-2" name="q" type="search" placeholder="Filter Repos" aria-label="Search" value="{{query_key or ''}}"></input>
-                    <button class="btn btn-outline-dark" type="submit" style="color: white;">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
 
     <!-- body-content -->
     <div class="content">
         <p>Currently serving: {{api_url or 'api_url unspecified'}}</p>
         {% if body == "repos-card" %}
-            {% if repos %}
-                {% include 'card.html' %}
-            {% elif query_key %}
-                <h1>Your search did not match any repositories</h1>
-            {% else %}
-                <h1>Unable to load repository information</h1>
-            {% endif %}
+            {% include 'repos-card.html' %}
+        {% elif body == "repos-table" %}
+            {% include 'repos-table.html' %}
+        {% elif body == "groups-table" %}
+            {% include 'groups-table.html' %}
+        {% else %}
+            <h1>404 - Page Not Found</h1>
+            <p>The page you were looking for isn't here, try clicking one of the navigation links above</p>
         {% endif %}
     </div>
 
