Fixed root app path for proxies. Proxies require proxy root path to be specified in .app_root

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,14 +20,14 @@
                         Repos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/repos/views/table">Table View</a></li>
-                        <li><a class="dropdown-item" href="/repos/views/card">Card View</a></li>
+                        <li><a class="dropdown-item" href="{{root}}repos/views/table">Table View</a></li>
+                        <li><a class="dropdown-item" href="{{root}}repos/views/card">Card View</a></li>
                     </ul>
                 </li>
 
                 <!-- STATIC NAVBAR SECTION -->
                 <li class="nav-item">
-                    <a class="nav-link {% if title == 'Groups' %} active {% endif %}" aria-current="page" href="/groups">Groups</a>
+                    <a class="nav-link {% if title == 'Groups' %} active {% endif %}" aria-current="page" href="{{root}}groups">Groups</a>
                 </li>
                 <!-- .junk->NAVBAR_EXTRAS -->
             </ul>
