--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -1,4 +1,19 @@
 {% if repos %}
+<nav aria-label="Repository pagination menu">
+    <ul class="pagination justify-content-center">
+        <li class="page-item {% if activePage == 1 %} disabled {% endif %}">
+            <a class="page-link" href="{{ approot }}/repos/views/table?{% if query %}q={{query}}&{% endif %}p={{ activePage - 1 }}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
+        </li>
+        {% for page in range(1, pages|int) %}
+        <li class="page-item">
+            <a class="page-link {% if page == activePage %} paginationActive {% endif %}" href="{{ approot }}/repos/views/table?{% if query %}q={{query}}&{% endif %}p={{page}}">{{page}}</a>
+        </li>
+        {% endfor %}
+        <li class="page-item {% if activePage == pages - 1 %} disabled {% endif %}">
+            <a class="page-link" href="{{ approot }}/repos/views/table?{% if query %}q={{query}}&{% endif %}p={{ activePage + 1 }}" {% if activePage == pages - 1 %} tabindex="-1" {% endif %}>Next</a>
+        </li>
+    </ul>
+</nav>
     <div class="rounded" style="background-color: white; overflow-y: auto;">
         <table class="table table-striped table-bordered">
             <thead>
@@ -15,8 +30,8 @@
             <tbody>
         {% for repo in repos %}
                 <tr>
-                    <th scope="row">{{loop.index}}</th>
-                    <td><a href="https://{{ repo.url }}">{{ repo.repo_name }}</a></td>
+                    <th scope="row">{{loop.index + (activePage - 1) * offset}}</th>
+                    <td><a href="{{ approot }}/repos/views/repo/{{ repo.repo_id }}">{{ repo.repo_name }}</a></td>
                     <td><a href="{{root}}groups?q={{ repo.repo_group_id }}">{{ repo.rg_name }}</a></td>
                     <td>TODO</td>
                     <td>{{ repo.commits_all_time }}</td>
