Changed formatting of issues and commits all time to integer instead of float

--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -34,8 +34,8 @@
                     <td><a href="{{ root }}/repos/views/repo/{{ repo.repo_id }}">{{ repo.repo_name }}</a></td>
                     <td><a href="{{root}}groups?q={{ repo.repo_group_id }}">{{ repo.rg_name }}</a></td>
                     <td>TODO</td>
-                    <td>{{ repo.commits_all_time }}</td>
-                    <td>{{ repo.issues_all_time }}</td>
+                    <td>{{ repo.commits_all_time|int }}</td>
+                    <td>{{ repo.issues_all_time|int }}</td>
                     <td>TODO</td>
                 </tr>
         {% endfor %}
