--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -4,13 +4,13 @@
         <li class="page-item {% if activePage == 1 %} disabled {% endif %}">
             <a class="page-link" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage - 1 }}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
-        {% for page in range(1, pages|int) %}
+        {% for page in range(1, pages|int + 1) %}
         <li class="page-item">
             <a class="page-link {% if page == activePage %} paginationActive {% endif %}" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{page}}">{{page}}</a>
         </li>
         {% endfor %}
-        <li class="page-item {% if activePage == pages - 1 %} disabled {% endif %}">
-            <a class="page-link" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage + 1 }}" {% if activePage == pages - 1 %} tabindex="-1" {% endif %}>Next</a>
+        <li class="page-item {% if activePage == pages|int %} disabled {% endif %}">
+            <a class="page-link" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage + 1 }}" {% if activePage == pages|int %} tabindex="-1" {% endif %}>Next</a>
         </li>
     </ul>
 </nav>
