--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -1,49 +1,49 @@
 {% if repos %}
-<nav aria-label="Repository pagination menu">
+<nav aria-label="Repository pagination menu" class="overflow-auto">
     <ul class="pagination justify-content-center">
-        <li class="page-item {% if activePage == 1 %} disabled {% endif %}">
-            <a class="page-link" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage - 1 }}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
+        <li class="page-item {% if activePage == 1 %} disabled {% else %} w3-hover-purple {% endif %}">
+            <a class="page-link" href="{{ root }}{{PS}}?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage - 1 }}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
         {% for page in range(1, pages|int + 1) %}
         <li class="page-item">
-            <a class="page-link {% if page == activePage %} paginationActive {% endif %}" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{page}}">{{page}}</a>
+            <a class="page-link {% if page == activePage %} paginationActive {% else %} w3-hover-blue {% endif %}" href="{{ root }}{{PS}}?{% if query_key %}q={{query_key}}&{% endif %}p={{page}}">{{page}}</a>
         </li>
         {% endfor %}
         <li class="page-item {% if activePage == pages|int %} disabled {% endif %}">
-            <a class="page-link" href="{{ root }}repos/views/table?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage + 1 }}" {% if activePage == pages|int %} tabindex="-1" {% endif %}>Next</a>
+            <a class="page-link" href="{{ root }}{{PS}}?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage + 1 }}" {% if activePage == pages|int %} tabindex="-1" {% endif %}>Next</a>
         </li>
     </ul>
 </nav>
-    <div class="rounded" style="background-color: white; overflow-y: auto;">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Repo Name</th>
-                    <th scope="col">Group</th>
-                    <th scope="col">Reports</th>
-                    <th scope="col">Commits</th>
-                    <th scope="col">Issues</th>
-                    <th scope="col">Change Requests</th>
-                </tr>
-            </thead>
-            <tbody>
-        {% for repo in repos %}
-                <tr>
-                    <th scope="row">{{loop.index + (activePage - 1) * offset}}</th>
-                    <td><a href="{{ root }}repos/views/repo/{{ repo.repo_id }}">{{ repo.repo_name }}</a></td>
-                    <td><a href="{{root}}groups?q={{ repo.repo_group_id }}">{{ repo.rg_name }}</a></td>
-                    <td>TODO</td>
-                    <td>{{ repo.commits_all_time|int }}</td>
-                    <td>{{ repo.issues_all_time|int }}</td>
-                    <td>TODO</td>
-                </tr>
-        {% endfor %}
-            </tbody>
-        </table>
-    </div>
+<div class="rounded w3-animate-opacity" style="background-color: white; overflow: auto;">
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Repo Name</th>
+                <th scope="col">Group</th>
+                <th scope="col">Reports</th>
+                <th scope="col">Commits</th>
+                <th scope="col">Issues</th>
+                <th scope="col">Change Requests</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for repo in repos %}
+            <tr>
+                <th scope="row">{{loop.index + (activePage - 1) * offset}}</th>
+                <td><a href="{{ root }}repos/views/repo/{{ repo.repo_id }}">{{ repo.repo_name }}</a></td>
+                <td><a href="{{root}}groups?q={{ repo.repo_group_id }}">{{ repo.rg_name }}</a></td>
+                <td>TODO</td>
+                <td>{{ repo.commits_all_time|int }}</td>
+                <td>{{ repo.issues_all_time|int }}</td>
+                <td>TODO</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% elif query_key %}
-    <h1>Your search did not match any repositories</h1>
+<h1>Your search did not match any repositories</h1>
 {% else %}
-    <h1>Unable to load repository information</h1>
+<h1>Unable to load repository information</h1>
 {% endif %}
