Testing new cache and settings system

--- a/templates/repo-info.html
+++ b/templates/repo-info.html
@@ -55,7 +55,8 @@
                 <div class="card h-100">
                     <div class="card-body" style="color: black;">
                         <h4>Hidden Chart</h4>
-                        <p>This chart is hidden under an accordion element. It can be expanded by clicking on the button below:</p>
+                        <p>This chart is hidden under an accordion element.</p>
+			<p>It can be expanded by clicking on the button below:</p>
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
