--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -1,7 +1,7 @@
 {% if repos %}
 <!-- Pagination menu start -->
 <nav aria-label="Repository pagination menu" class="overflow-auto">
-    <ul class="pagination justify-content-center">
+    <ul class="pagination">
         <li class="page-item {% if activePage == 1 %} disabled {% else %} w3-hover-purple {% endif %}">
             <a class="page-link" href="{{ root }}{{PS}}?{% if query_key %}q={{query_key}}&{% endif %}p={{ activePage - 1 }}" {% if activePage == 1 %} tabindex="-1" {% endif %}>Previous</a>
         </li>
