--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -40,3 +40,19 @@ body {
     border-color: #6134b3;
     color: white;
 }
+
+.img-wrapper::after {
+    font-size: 12px;
+    content: 'Click Image To View Full Size';
+    display: block;
+}
+
+#imgViewer::-webkit-scrollbar {
+    -webkit-appearance: none;
+    height: 10px;
+}
+#imgViewer::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
