--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #6f42c1;">
     <div class="container-fluid">
         <!-- BRAND LOGO -->
-        <a class="navbar-brand nav-image" href="{{root}}"><img src="{{ url_for('static', filename= 'img/augur_logo.png') }}" class="img-fluid" alt="augur Logo"></a>
+        <a class="navbar-brand nav-image" href="{{root}}"><img src="{{ url_for('static', filename= 'img/augur_logo.png') }}" class="img-fluid nav-img" alt="augur Logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
