--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
     <link rel="manifest" href="{{ url_for('static', filename= 'favicon/site.webmanifest') }}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+    <!-- jQuery Google CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="{{ url_for('static', filename= 'css/stylesheet.css') }}" rel="stylesheet">
@@ -19,6 +22,10 @@
         <title>{{title}} - Augur View</title>
     {% else %}
         <title>Augur View</title>
+    {% endif %}
+
+    {% if redirect %}
+        <meta http-equiv="refresh" content="{{ pause or 0}}; URL='{{ root }}{{ redirect }}'"/>
     {% endif %}
 </head>
 
