--- a/templates/repo-info.html
+++ b/templates/repo-info.html
@@ -100,9 +100,9 @@
         // Get the <span> element that closes the modal
         // var span = document.getElementsByClassName("close")[0];
 
-        // When the user clicks on <span> (x), close the modal
+        // When the user clicks on the modal background, close the modal
         modal.onclick = function() {
-          modal.style.display = "none";
+            modal.style.display = "none";
         }
     }
 </script>
