Added collection status page, fixed decimal representation in card view

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,6 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link {% if title == 'Groups' %} active {% endif %}" aria-current="page" href="{{root}}groups">Groups</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if title == 'Status' %} active {% endif %}" aria-current="page" href="{{root}}status">Collection Status</a>
+                </li>
                 <!-- .junk->NAVBAR_EXTRAS -->
             </ul>
             <form class="d-flex" method="get" action="?">
